--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
             <artifactId>guava</artifactId>
             <version>33.5.0-jre</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
