--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
       - MYSQL_DATABASE=demo
+    volumes:
+      - ./db_init:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
